backend v0.1.1
OpenAPI:
- Changed endpoint "postcodes_by_city" to "postcodes_by_settlement"
- Added schema "settlement"

DB:
- Changed type of "Postcode" field from "int64" to "string"
